tests/toylang/neg/001281_mutation.toylang
program a = { then a then sleep; } .
